@@ -36,6 +36,10 @@ __BEGIN_DECLS
 # include <bits/types/struct_osockaddr.h>
 #endif
 
+#ifdef __USE_GNU
+# include <bits/types/struct_timespec.h>
+#endif
+
 /* The following constants should be used for the second parameter of
    `shutdown'.  */
 enum
